--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<data>
+    <variable
+        name="main"
+        type="com.light.national_geographic.ui.activity.MainActivity"/>
 
+</data>
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.activity.MainActivity">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:background="@color/colorMain"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:theme="@style/toolBarColor"
+            android:text="Hello World!" >
+        <ImageView
+            android:id="@+id/title_main"
+            android:layout_width="180dp"
+            android:layout_gravity="center"
+            android:layout_height="32dp"
+            android:src="@drawable/label"/>
+        <ImageView
+            android:id="@+id/ic_more"
+            android:layout_width="25dp"
+            android:layout_gravity="right"
+            android:layout_height="42dp"
+            android:src="@drawable/selector_more"/>
+        </android.support.v7.widget.Toolbar>
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/rv_background">
+                </android.support.v7.widget.RecyclerView>
+                <FrameLayout
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="180dp"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/logo">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="260dp"
+                        android:text="@string/load_failture"
+                        android:textSize="@dimen/load_fail_text_zise"/>
 
+                </FrameLayout>
+            </FrameLayout>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 </layout>
