--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2C2C2F</color>
+    <color name="colorPrimaryDark">#2C2C2F</color>
+    <color name="colorAccent">#2C2C2F</color>
+
+    <color name="colorYellow">#FFCE00</color>
+    <color name="colorMain">#2C2C2F</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="rv_background">#cecece</color>
 </resources>
