图像合集详情界面完成

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -28,7 +28,7 @@
             type="Boolean" />
 
         <variable
-            name="isConnect"
+            name="isCollect"
             type="Boolean" />
 
     </data>
