--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,10 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="cache"
+            type="String" />
+
+    </data>
+
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ECECEC"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/tool_bar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorMain"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:theme="@style/toolBarColor">
+
+                <ImageView
+                    android:id="@+id/title_main"
+                    android:layout_width="180dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/label" />
+
+                <ImageView
+                    android:id="@+id/info_back"
+                    android:layout_width="25dp"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_gravity="left"
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/selector_back" />
+            </android.support.v7.widget.Toolbar>
+
+            <Button
+                android:id="@+id/info_collect"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"
+                android:background="#ffffff"
+                android:foreground="?attr/selectableItemBackground"
+                android:text="收藏"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="5dp"
+                android:text="清除缓存不会影响收藏以及已保存的照片"
+                android:textSize="14.5sp" />
+            <Button
+                android:id="@+id/info_cache"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="5dp"
+                android:background="#FFFFFF"
+                android:foreground="?attr/selectableItemBackground"
+                android:text="@{`清除缓存(` + cache +`)`}"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget" />
+
+            <TextView
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="5dp"
+                android:textSize="14.5sp"
+                android:layout_marginBottom="1dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="National_Geographic是开源项目\n跳转到GitHub提交反馈以及检查更新"/>
+
+            <Button
+                android:id="@+id/info_feedback"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#FFFFFF"
+                android:foreground="?attr/selectableItemBackground"
+                android:text="提交反馈"
+                android:layout_marginBottom="5dp"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/info_checkupdate"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="5dp"
+                android:background="#FFFFFF"
+                android:foreground="?attr/selectableItemBackground"
+                android:text="检查更新"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="5dp"
+                android:textSize="14.5sp"
+                android:layout_marginBottom="1dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="使用应用默认您愿意遵守开源许可协议并同意免责申明"/>
+            <Button
+                android:id="@+id/info_disclaimer"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#FFFFFF"
+                android:layout_marginBottom="5dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:text="免责申明"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/info_share"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#FFFFFF"
+                android:layout_marginBottom="5dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:text="分享应用"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/info_about"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="5dp"
+                android:background="#FFFFFF"
+                android:foreground="?attr/selectableItemBackground"
+                android:text="关于"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:text="@string/app_version_show"/>
+    </FrameLayout>
 
 </layout>
