--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
             android:id="@+id/ic_more"
             android:layout_width="25dp"
             android:layout_gravity="right"
+            android:layout_marginRight="15dp"
             android:layout_height="42dp"
             android:src="@drawable/selector_more"/>
         </android.support.v7.widget.Toolbar>
